--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="start_simulation">Start!</string>
     <string name="add_car">Add Car</string>
     <string name="add_5_cars">Add 5 Cars</string>
+    <string name="number_of_cars">Cars</string>
+    <string name="efficiency">Efficiency</string>
+    <string name="na">NA</string>
+    <string name="fps">FPS</string>
 </resources>
